--- a/mobileWeb/day04/codeMaterials/05-手势封装-drag.html
+++ b/mobileWeb/day04/codeMaterials/05-手势封装-drag.html
@@ -2,69 +2,69 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>触屏事件</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            background-color: #F7F7F7;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>触屏事件</title>
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+			background-color: #F7F7F7;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+		}
 
-        .box {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 100px;
-            height: 100px;
-            background-color: pink;
-        }
-    </style>
+		.box {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			width: 100px;
+			height: 100px;
+			background-color: pink;
+		}
+	</style>
 </head>
 
 <body>
-    <div class="box"></div>
-    <script>
-        var box = document.querySelector('.box');
+	<div class="box"></div>
 
-    //   功能:封装drag手势  能通过手指拖拽着元素到处移动
-    //   思路:1.获取手指的起始位置的坐标(touchstart事件中去获取touch对象的client的值)
-    //        2.获取手指的当前位置的坐标(touchmove事件中去获取touch对象的client的值)
-    //        3.获取元素以前的距离顶部和左侧的位置(当前元素的offsetTop offsetLeft)
-    //        4.当前元素位置
-                    // left=开始的left+(当前的位置的X-开始的位置的x)
-                    // top = 开始的top+(当前的位置的y-开始的位置的y)
+	<script>
+		// 功能: 实现移动端手指拖拽
+		// 步骤:
 
-    // 步骤:
-        // 1.声明全局变量(如果是自己声明的私有变量 请按照规范用_开头声明变量)
-        var startX,startY,currentX,currentY,_left,_top;
-        // 2.给box添加touchstart事件 获取startX startY left top的值
-        box.addEventListener('touchstart',function(ev){
-            var touches = ev.targetTouches[0];
+		// 1.获取元素box
+		var box = document.getElementsByClassName('box')[0];
+		// 2.声明变量startTx,startTy,endTx,endTy,_left,_top;
+		var startTx, startTy, endTx, endTy, _left, _top;
+		// 3.给box元素注册touchstart事件
+		box.addEventListener('touchstart', function (e) {
+			// 4.获取触点的起始点坐标
+			var touches = e.targetTouches[0];
 
-            // 获取手指的起始位置坐标
-            startX =touches.clientX;
-            startY =touches.clientY;
-            // 获取元素的left和top
-            _left = this.offsetLeft;
-            _top  =  this.offsetTop;
-        })
-        // 3.给box添加touchmove事件 获取currentX currentY 
-        box.addEventListener('touchmove',function(ev){
-            var touches = ev.changedTouches[0];
-            // 获取手指的当前位置坐标
-            currentX =touches.clientX;
-            currentY =touches.clientY;
-           // 4.计算元素的当前位置  显示样式
-           this.style.left = _left +(currentX-startX)+'px';
-           this.style.top  = _top + (currentY-startY)+'px';
-        })
+			startTx = touches.clientX;
+			startTy = touches.clientY;
 
-    </script>
+			// 5.获取box开始时的位置
+			_left = this.offsetLeft;
+			_top = this.offsetTop;
+
+		})
+
+		// 6.给box元素注册touchmove事件
+		box.addEventListener('touchmove', function (e) {
+			// 7.获取触点的终止点坐标
+			var touches = e.changedTouches[0];
+
+			endTx = touches.clientX;
+			endTy = touches.clientY;
+			
+
+			// 8.设置元素的位置为触点的位置
+			this.style.left = _left + (endTx - startTx) + 'px';
+			this.style.top = _top + (endTy - startTy) + 'px';
+		})
+	</script>
 </body>
 
 </html>
