--- a/mobileWeb/day04/codeMaterials/06-手势封装-swipe.html
+++ b/mobileWeb/day04/codeMaterials/06-手势封装-swipe.html
@@ -1,78 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>swipe手势封装</title>
 </head>
+
 <body>
-  <!-- 为了显示手势方向-->
-  <div class="result"></div>
+  <!-- 手势方向包括:向上,向下,向左,向右,用result这个元素来显示结果 -->
+  <h1 class="result"></h1>
 
   <script>
-    // 功能:封装一个判断手势方向的swipe
-    // 思路:
-          // 1.给document添加事件 touchstart 获取起始点坐标
-          // 2.给document添加事件 touchend   获取终止点的坐标
-          // 3.计算x和y的差值的绝对值 用来判断是水平还是垂直
-          // 4.在水平或者垂直的基础上判断是向左还是向右 或者向上或者向下
+    // 功能: 封装手势,用来判断手指滑动方向
     // 步骤:
-        // 1.声明变量
-        var startX,startY,endX,endY,absX,absY;
-        // 2.给document添加事件 touchstart 
-        document.addEventListener('touchstart',function(ev){
-          var touches = ev.targetTouches[0];
 
-          // 获取起始点坐标
-          startX = touches.clientX;
-          startY = touches.clientY;
-        })
-        // 3.给document添加事件 touchend
-        document.addEventListener('touchend',function(ev){
-          var touches = ev.changedTouches[0];
+    // 1.声明变量 startTx,startTy,endTx,endTy,absTx,absTy;
+    var startTx, startTy, endTx, endTy, absTx, absTy;
+    // 2.获取触点起始点坐标
+    document.addEventListener('touchstart', function (e) {
+      var touches = e.targetTouches[0];
 
-          // 获取终止点坐标
-          endX =touches.clientX;
-          endY =touches.clientY;
-        // 4.计算x和y的差值的绝对值
-        absX = Math.abs(endX - startX);
-        absY = Math.abs(endY - startY);
+      startTx = touches.clientX;
+      startTy = touches.clientY;
+
+    })
+
+    // 3.获取触点终止点坐标
+    document.addEventListener('touchend', function (e) {
+      var touches = e.changedTouches[0];
+
+      endTx = touches.clientX;
+      endTy = touches.clientY;
 
 
+      // 4.计算X轴坐标和Y轴坐标的绝对值
+      absTx = Math.abs(endTx - startTx);
+      absTy = Math.abs(endTy - startTy);
 
-        // 5.判断水平还是垂直
-        // var result =absX > absY ? 'shuiping' : 'chuizhi';
-        // 6.判断是向左还是向右 或者向上或者向下
-          // if(result == 'shuiping'){
-            // 判断是向左还是向右
-            // if(endX > startX ){
-              // document.querySelector('.result').innerHTML = "向右";
-          //   }else {
-          //     document.querySelector('.result').innerHTML = "向左";
-          //   }
-          // }else{
-            // 判断是向上还是向下
-            // if(endY > startY ){
-            //   document.querySelector('.result').innerHTML = "向下";
-            // }else {
-            //   document.querySelector('.result').innerHTML = "向上";
-            // }
-          // }
+      // 5.如果滑动距离大于6,才算滑动
+      if (Math.max(absTx, absTy) > 6) {
+        // 6.判断滑动方向是水平还是竖直
 
+        if (absTx > absTy) {
+          // 水平滑动(判断向左向右)
+          var direction = endTx - startTx > 0 ? 'right' : 'left';
+        } else {
+          // 竖直滑动(判断向上向下)
+          var direction = endTy - startTy > 0 ? 'bottom' : 'top';
+        }
+      }
 
-
-          // 换一种方式来做5 和 6
-
-          var result =absX > absY ? 
-           endX > startX ?'向右':'向左': 
-           endY > startY ?'向下':'向上';
-
-           document.querySelector('.result').innerHTML =result;
-        })
-
-
+      document.querySelector(".result").innerHTML = direction;
+    })
   </script>
-  
 </body>
+
 </html>
