--- a/mobileWeb/day04/codeMaterials/07-touch&click.html
+++ b/mobileWeb/day04/codeMaterials/07-touch&click.html
@@ -1,86 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>click延时</title>
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>touch和click的触发顺序</title>
 	<style>
+		html,
 		body {
-			padding: 0;
+			width: 100%;
+			height: 100%;
 			margin: 0;
-			text-align: center;
-			background-color: #F7F7F7;
-		}
-		
-		.result {
-			width: 100px;
-			height: 100px;
-			text-align: center;
-			line-height: 100px;
-			margin: 100px auto 0;
-			border: 1px solid #CCC;
+			padding: 0;
 		}
 
+		.box {
+			width: 300px;
+			height: 300px;
+			background-color: purple;
+		}
 	</style>
 </head>
+
 <body>
-	<div class="result">
-		点我试试
-	</div>
+	<div class="box"></div>
 	<script>
-		var startTime;
+		// 比较touch事件和click事件的执行顺序
 
-		// 打印信息函数
-		var log = function (msg) {
-			// 创建DOM结点，显示信息
-			var div = document.createElement('div');
+		// 步骤:
 
-			// 计算触发时间
-			div.innerHTML = (new Date().getTime()) + ': ' + (new Date().getTime() - startTime) + ': ' + msg;
+		// 1.获取box元素
+		var box = document.querySelector(".box");
 
-			// 添加到页面中
-			document.body.appendChild(div);
-		};
+		// 2.给box添加touch事件
+		var startTx, startTy, endTx, endTy, startTime, endTime;
+		box.addEventListener('touchstart', function (e) {
+			var touches = e.targetTouches[0];
 
-		// 触屏开始
-		var touchStart = function () {
+			startTx = touches.clientX;
+			startTy = touches.clientY;
+
+			// 获取touchstart的开始时间
 			startTime = new Date().getTime();
+		})
 
-			log('touchStart');
-		};
+		box.addEventListener('touchend', function (e) {
+			var touches = e.changedTouches[0];
 
-		// 触屏结束
-		var touchEnd = function () {
-			log('touchEnd');
-		};
+			endTx = touches.clientX;
+			endTy = touches.clientY;
 
-		// 鼠标按下
-		var mouseDown = function () {
-			log('mouseDown');
-		};
-
-		// 鼠标点击
-		var mouseClick = function () {
-			log('mouseClick');
-		};
-
-		// 鼠标抬起
-		var mouseUp = function () {
-			log('mouseUp');
-		};
-
-		// 添加事件元素
-		var result = document.querySelector('.result');
-
-		// 分别绑订事件
-		result.addEventListener('mousedown', mouseDown);
-		result.addEventListener('click', mouseClick);
-		result.addEventListener('mouseup', mouseUp);
-		result.addEventListener('touchstart', touchStart);
-		result.addEventListener('touchend', touchEnd);
+			// 获取touchend的开始时间
+			endTime = new Date().getTime();
 
 
-		
+			// 判断时间
+			if (endTime - startTime > 600) {
+				return false;
+			}
+
+			// 判断距离
+			if (Math.abs(endTx - startTx) < 6 && Math.abs(endTy - startTy) < 6) {
+				console.log("Tap 手势触发啦!!!");
+
+				console.time('timer');
+			}
+
+		})
+
+		// 3.给box添加click事件
+		box.addEventListener('click', function (e) {
+			console.log('click事件触发啦!!!');
+			console.timeEnd('timer');
+		})
+
+		// 综上: 在正常的移动端页面中,click事件比touch事件延后300ms
+		//  解决方案: 
+		//  1.在页面head标签上添加<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		//  2.在页面中引入fastclick插件
 	</script>
 </body>
+
 </html>
