--- a/mobileWeb/day04/codeMaterials/02-touchEventObject.html
+++ b/mobileWeb/day04/codeMaterials/02-touchEventObject.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,7 +50,7 @@
 
 
 			// 获取触摸元素上有多少个触点
-			box.innerHTML = e.targetTouches.length;
+			// box.innerHTML = e.targetTouches.length;
 
 			// 获取屏幕上有多少个触点
 			// 从屏幕外往屏幕里开始触摸
@@ -64,11 +64,11 @@
 		})
 
 		box.addEventListener("touchmove", function (e) {
-			box.innerHTML = e.targetTouches.length + '========' + e.touches.length;
+			//box.innerHTML = e.targetTouches.length + '========' + e.touches.length;
 		})
 
 		box.addEventListener("touchend",function(e){
-			box.innerHTML = e.changedTouches.length;
+			//box.innerHTML = e.changedTouches.length;
 			// 通过在touchend事件中获取触点个数,我们可以知道: 
 			// 如果元素上有两个触点,且在最后同时离开 ,那么 targetTouches和touches都没有值,但 changedTouches 会保留两个触点信息
 			// 如果元素上有多个点,且在最后都是依次离开,那么targetTouches和touches都没有值,但 changedTouches 只会保留最后一个触点的信息
