update README and fix reset.css and initial html structure

--- a/H5C3/day01/Code/QBH/index.html
+++ b/H5C3/day01/Code/QBH/index.html
@@ -5,25 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Shopping Promotion</title>
+  <title>QBH</title>
+  <!-- 引入清除浏览器默认样式表 -->
+  <link rel="stylesheet" href="./css/reset.css">
+  <!-- 引入本页面所需样式表 -->
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-  <!-- 模块一: 标题 title-->
-
-  <!-- 模块二: 商品列表 list -->
-
-  <!-- 模块三: 选购  buy -->
-
-  <!-- 模块四: 填写信息 info -->
-
-  <!-- 模块五: 付款   payment-->
-
-  <!-- 模块六: 送货 delivery-->
-
-  <!-- 模块七: 评价 appraise  -->
-
-  <!-- 模块八: 购物 shopping -->
+  <main class="fullage">
+    <!-- 模块一: 标题 title-->
+    <section class="section qbh-title"></section>
+    <!-- 模块二: 商品列表 list -->
+    <section class="section qbh-list"></section>
+    <!-- 模块三: 选购  buy -->
+    <section class="section qbh-buy"></section>
+    <!-- 模块四: 填写信息 info -->
+    <section class="section qbh-info"></section>
+    <!-- 模块五: 付款   payment-->
+    <section class="section qbh-payment"></section>
+    <!-- 模块六: 送货 delivery-->
+    <section class="section qbh-delivery"></section>
+    <!-- 模块七: 评价 appraise  -->
+    <section class="section qbh-appraise"></section>
+    <!-- 模块八: 购物 shopping -->
+    <section class="section qbh-shopping"></section>
+  </main>
 </body>
 
 </html>
