update README and link jQuery and jQuery plugin

--- a/H5C3/day01/Code/QBH/index.html
+++ b/H5C3/day01/Code/QBH/index.html
@@ -16,21 +16,37 @@
   <main class="fullage">
     <!-- 模块一: 标题 title-->
     <section class="section qbh-title"></section>
+
     <!-- 模块二: 商品列表 list -->
     <section class="section qbh-list"></section>
+
     <!-- 模块三: 选购  buy -->
     <section class="section qbh-buy"></section>
+
     <!-- 模块四: 填写信息 info -->
     <section class="section qbh-info"></section>
+
     <!-- 模块五: 付款   payment-->
     <section class="section qbh-payment"></section>
+
     <!-- 模块六: 送货 delivery-->
     <section class="section qbh-delivery"></section>
+
     <!-- 模块七: 评价 appraise  -->
     <section class="section qbh-appraise"></section>
+
     <!-- 模块八: 购物 shopping -->
     <section class="section qbh-shopping"></section>
   </main>
+
+  <!-- 在body闭合标签上引入jQuery库 -->
+  <script src="./js/jquery.min.js"></script>
+  <!-- 引入增强动画过渡过程插件 -->
+  <script src="./js/jquery.easings.min.js"></script>
+  <!-- 引入全屏滚动插件 -->
+  <scirpt src="./js/jquery.fullPage.min.js"></scirpt>
+  <!-- 引入该页面的JavaScript文件 -->
+  <script src="./js/qbh.js"></script>
 </body>
 
 </html>
