write  module two

--- a/H5C3/day01/Code/QBH/index.html
+++ b/H5C3/day01/Code/QBH/index.html
@@ -25,18 +25,18 @@
     <section class="section qbh-list">
       <!-- 描述 -->
       <div class="desc">
-        <img src="./img/qbh-list-worda.png" alt="">
-        <img src="./img/qbh-list-wordb.png" alt="">
+        <img class="desc-worda" src="./img/qbh-list-worda.png" alt="">
+        <img class="desc-wordb" src="./img/qbh-list-wordb.png" alt="">
       </div>
       <!-- 屏幕 -->
-      <div class="screen">
+      <!-- <div class="screen">
         <div class="search-box">
           <img src="./img/qbh-list-search-font.png" alt="">
         </div>
         <img class="list-search" src="./img/qbh-list-search.png" alt="">
         <img class="sofa-pic" src="./img/qbh-list-sofa-pic.png" alt="">
         <img class="list-sofas" src="./img/qbh-list-sofas.png" alt="">
-      </div>
+      </div> -->
     </section>
 
     <!-- 模块三: 选购  buy -->
