this commit about QBH last  four model

--- a/H5C3/day02/Code/QBH/index.html
+++ b/H5C3/day02/Code/QBH/index.html
@@ -72,9 +72,37 @@
       </div>
     </div>
     <!-- 第五屏 -->
-    <div class="section qbh-payment"></div>
+    <div class="section qbh-payment">
+      <!-- 付款文字 -->
+      <img class="qbh-payment-font" src="./image/qbh-payment-font.png" alt="">
+      <div class="qbh-payment-left">
+        <!-- 掉下的沙发 -->
+        <img class="qbh-payment-sofa-start" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <!-- 账单 -->
+        <img class="qbh-payment-bill" src="./image/qbh-payment-bill.png" alt="">
+        <img class="qbh-payment-cards" src="./image/qbh-payment-cards.png" alt="">
+        <img class="qbh-payment-sofa-end" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <img class="qbh-payment-sofa-end-continue" src="./image/qbh-info-rotate-sofa.png" alt="">
+      </div>
+      <div class="qbh-payment-right">
+        <img class="qbh-payment-mouse-start" src="./image/qbh-payment-monse-start.png" alt="">
+        <img class="qbh-payment-mouse-end" src="./image/qbh-payment-mouse-end.png" alt="">
+        <img class="qbh-payment-hands" src="./image/qbh-payment-hands.png" alt="">
+      </div>
+    </div>
     <!-- 第六屏 -->
-    <div class="section qbh-delivery"></div>
+    <div class="section qbh-delivery">
+      <!-- 云彩 -->
+      <img class="qbh-delivery-cloud-one" src="./image/qbh-delivery-cloud-one.png" alt="">
+      <img class="qbh-delivery-cloud-two" src="./image/qbh-delivery-cloud-two.png" alt="">
+      <!-- 箱子 -->
+      <img class="qbh-delivery-box" src="./image/qbh-delivery-box.png" alt="">
+      <!-- 卡车 -->
+      <div class="qbh-delivery-goods">
+        <img class="qbh-delivery-truck" src="./image/qbh-delivery-truck.png" alt="">
+        <img class="qbh-delivery-truck-font" src="./image/qbh-delivery-truck-font.png" alt="">
+      </div>
+    </div>
     <!-- 第七屏 -->
     <div class="section qbh-appraise"></div>
     <!-- 第八屏 -->
