--- a/H5C3/day02/Code/QBH/index.html
+++ b/H5C3/day02/Code/QBH/index.html
@@ -101,6 +101,7 @@
       <div class="qbh-delivery-goods">
         <img class="qbh-delivery-truck" src="./image/qbh-delivery-truck.png" alt="">
         <img class="qbh-delivery-truck-font" src="./image/qbh-delivery-truck-font.png" alt="">
+        <img class="qbh-delivery-deliveryman" src="./image/qbh-delivery-deliveryman.png" alt="">
       </div>
     </div>
     <!-- 第七屏 -->
