--- a/H5C3/day02/Code/QBH/index.html
+++ b/H5C3/day02/Code/QBH/index.html
@@ -15,8 +15,14 @@
 </head>
 
 <body>
+  <!-- 购物中心 -->
   <a href="javascript:;" class="shopping-center">
     <img src="./image/shoppingcenter.png" alt="">
+  </a>
+
+  <!-- 继续往下 -->
+  <a href="javascript:;" class="down">
+    <img src="./image/down.png" alt="">
   </a>
   <div id="fullpage">
     <!-- 第一屏 -->
@@ -55,6 +61,7 @@
         </div>
         <!-- 斜着的沙发 -->
         <img class="qbh-buy-rotate-sofa" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <img class="qbh-buy-sofa-pic" src="./image/qbh-list-sofa-pic.png" alt="">
       </div>
     </div>
     <!-- 第四屏 -->
@@ -73,41 +80,76 @@
     </div>
     <!-- 第五屏 -->
     <div class="section qbh-payment">
-      <!-- 付款文字 -->
       <img class="qbh-payment-font" src="./image/qbh-payment-font.png" alt="">
+      <!-- qbh-payment-left没有任何用处 只是用来分辨 模块的左边 -->
       <div class="qbh-payment-left">
-        <!-- 掉下的沙发 -->
-        <img class="qbh-payment-sofa-start" src="./image/qbh-info-rotate-sofa.png" alt="">
-        <!-- 账单 -->
         <img class="qbh-payment-bill" src="./image/qbh-payment-bill.png" alt="">
         <img class="qbh-payment-cards" src="./image/qbh-payment-cards.png" alt="">
-        <img class="qbh-payment-sofa-end" src="./image/qbh-info-rotate-sofa.png" alt="">
-        <img class="qbh-payment-sofa-end-continue" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <img class="qbh-payment-rotate-sofa-start" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <img class="qbh-payment-rotate-sofa-end" src="./image/qbh-info-rotate-sofa.png" alt="">
+        <img class="qbh-payment-rotate-sofa-continue" src="./image/qbh-info-rotate-sofa.png" alt="">
       </div>
+      <!-- qbh-payment-right没有任何用处 只是用来分辨 模块的左边 -->
       <div class="qbh-payment-right">
+        <img class="qbh-payment-hands" src="./image/qbh-payment-hands.png" alt="">
         <img class="qbh-payment-mouse-start" src="./image/qbh-payment-monse-start.png" alt="">
         <img class="qbh-payment-mouse-end" src="./image/qbh-payment-mouse-end.png" alt="">
-        <img class="qbh-payment-hands" src="./image/qbh-payment-hands.png" alt="">
       </div>
     </div>
     <!-- 第六屏 -->
     <div class="section qbh-delivery">
       <!-- 云彩 -->
-      <img class="qbh-delivery-cloud-one" src="./image/qbh-delivery-cloud-one.png" alt="">
-      <img class="qbh-delivery-cloud-two" src="./image/qbh-delivery-cloud-two.png" alt="">
+      <div class="qbh-delivery-cloud">
+        <img class="qbh-delivery-cloud-one" src="./image/qbh-delivery-cloud-one.png" alt="">
+        <img class="qbh-delivery-cloud-two" src="./image/qbh-delivery-cloud-two.png" alt="">
+      </div>
+
       <!-- 箱子 -->
       <img class="qbh-delivery-box" src="./image/qbh-delivery-box.png" alt="">
       <!-- 卡车 -->
-      <div class="qbh-delivery-goods">
-        <img class="qbh-delivery-truck" src="./image/qbh-delivery-truck.png" alt="">
-        <img class="qbh-delivery-truck-font" src="./image/qbh-delivery-truck-font.png" alt="">
-        <img class="qbh-delivery-deliveryman" src="./image/qbh-delivery-deliveryman.png" alt="">
-      </div>
+      <img class="qbh-delivery-truck" src="./image/qbh-delivery-truck.png" alt="">
+      <!-- 快递员 -->
+      <img class="qbh-delivery-deliveryman" src="./image/qbh-delivery-deliveryman.png" alt="">
+      <!-- 门 -->
+      <img class="qbh-delivery-door" src="./image/qbh-delivery-door.png" alt="">
+      <!-- 买家 -->
+      <img class="qbh-delivery-buyer" src="./image/qbh-delivery-buyer.png" alt="">
+      <!-- 商家 -->
+      <img class="qbh-delivery-shangjia" src="./image/qbh-delivery-shangjia.png" alt="">
+      <!-- 买家地址 -->
+      <img class="qbh-delivery-truck-font" src="./image/qbh-delivery-truck-font.png" alt="">
+      <!-- 送货的开始标语 -->
+      <img class="qbh-delivery-font-start" src="./image/qbh-delivery-font-start.png" alt="">
+      <!--送货的结束标语  -->
+      <img class="qbh-delivery-font-end" src="./image/qbh-delivery-font-end.png" alt="">
+      <!-- 请收货字样 -->
+      <img class="qbh-delivery-shouhuo" src="./image/qbh-delivery-shouhuo.png" alt="">
+    
     </div>
     <!-- 第七屏 -->
-    <div class="section qbh-appraise"></div>
+    <div class="section qbh-appraise">
+      <div class="qbh-appraise-star">
+        <img src="./image/qbh-appraise-star.png" alt="">
+        <img src="./image/qbh-appraise-star.png" alt="">
+        <img src="./image/qbh-appraise-star.png" alt="">
+        <img src="./image/qbh-appraise-star.png" alt="">
+        <img src="./image/qbh-appraise-star.png" alt="">
+      </div>
+      <img class="qbh-appraise-haoping" src="./image/qbh-appraise-haoping.png" alt="">
+    </div>
     <!-- 第八屏 -->
-    <div class="section qbh-shopping"></div>
+    <div class="section qbh-shopping">
+      <a href="javascript:;" class="qbh-shopping-start-shopping">
+        <img src="./image/qbh-shopping-start-shopping.png" alt="">
+      </a>
+      <a href="javascript:;" class="qbh-shopping-again">
+        <img src="./image/qbh-shopping-again.png" alt="">
+      </a>
+
+      <img class="qbh-shopping-hands" src="./image/qbh-shopping-hands.png" alt="">
+
+      <img class="qhb-shopping-dong" src="./image/qhb-shopping-dong.gif" alt="">
+    </div>
   </div>
   <!-- 引入jQuery库 -->
   <script src="./js/jquery.min.js"></script>
