remove mobileSite and write canvas code at first day

--- a/Canvas/day01/Code/2-canvas绘图的基本步骤.html
+++ b/Canvas/day01/Code/2-canvas绘图的基本步骤.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>canvas绘图的基本步骤</title>
+  <style>
+    canvas {
+      border: 1px solid #ff0000;
+    }
+  </style>
 </head>
 
 <body>
@@ -16,14 +21,14 @@
     var canvas = document.querySelector('canvas');
     canvas.width = 500;
     canvas.height = 500;
-  // 3.获的画笔
+    // 3.获取画笔
     var context = canvas.getContext('2d');
-  // 4.定位画笔的起始位置
-  context.moveTo(0,0);
-  // 5.定位画笔的第一次结束位置
-  context.lineTo(100,0);
-  // 6.描边
-  context.stroke();
+    // 4.确定画笔下笔位置
+    context.moveTo(0, 0);
+    // 5.确定画笔停笔位置
+    context.lineTo(500, 500);
+  // 6.用线把下笔位置和停笔位置连接起来
+    context.stroke();
   </script>
 </body>
 
