--- a/Canvas/day01/Code/10-canvas绘制多个正方形.html
+++ b/Canvas/day01/Code/10-canvas绘制多个正方形.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>绘制多个正方形</title>
+  <title>绘制多个正方形(beginPath)</title>
 </head>
 
 <body>
@@ -29,7 +29,22 @@
     //   3.获取画笔(上下文)
     var context = canvas.getContext('2d');// 这是画二维图形的画笔
 
+    //  4.绘制第一个正方形
+    context.moveTo(100,100);
+    context.lineTo(200,100);
+    context.lineTo(200,200);
+    context.lineTo(100,200);
+    context.lineTo(100,100);
+    context.stroke();
 
+
+    context.beginPath();
+    context.moveTo(250,100);
+    context.lineTo(350,100);
+    context.lineTo(350,200);
+    context.lineTo(250,200);
+    context.lineTo(250,100);
+    context.fill();
     
         
   </script>
