--- a/Canvas/day01/Code/7-canvas绘制相交线.html
+++ b/Canvas/day01/Code/7-canvas绘制相交线.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>canvas绘制线段(直线)</title>
+  <title>canvas绘制相交线段</title>
 </head>
 
 <body>
@@ -29,20 +29,33 @@
     //   3.获取画笔(上下文)
     var context = canvas.getContext('2d');// 这是画二维图形的画笔
 
-        context.strokeStyle = 'red';
-        // context.lineCap = 'butt';
-        // context.lineCap = 'round';
-        // context.lineCap = 'square';
-        context.lineWidth = 10;
-    //  4.计划起始点
-        context.moveTo(10,10);
-    
-    //  5.计划停止点
-        context.lineTo(110,10);
+    // 4.绘制第一个
 
-    //  6.用线把想好的点连接起来
-        context.stroke();
+    context.lineWidth = 10;
+    context.strokeStyle = 'red';
+    context.lineJoin = 'miter';
+    context.moveTo(230,50);
+    context.lineTo(250,70);
+    context.lineTo(270,50);
+    context.stroke();
 
+
+    context.beginPath();
+    context.strokeStyle = 'green';
+    context.lineJoin = 'round';
+    context.moveTo(230,70);
+    context.lineTo(250,90);
+    context.lineTo(270,70);
+    context.stroke();
+
+
+    context.beginPath();
+    context.strokeStyle = 'blue';
+    context.lineJoin = 'bevel';
+    context.moveTo(230,90);
+    context.lineTo(250,110);
+    context.lineTo(270,90);
+    context.stroke();
         
   </script>
 </body>
