update canvas day01

--- a/Canvas/day01/Code/6-canvas绘制不同颜色的多条线段.html
+++ b/Canvas/day01/Code/6-canvas绘制不同颜色的多条线段.html
@@ -39,7 +39,7 @@
     context.stroke();
 
     // 绘制第二条线 线宽为2 颜色为绿色
-    context.beginPath();
+    // context.beginPath();
     context.strokeStyle = 'green';
     context.lineWidth = 2;
     context.moveTo(200,100);
@@ -47,7 +47,7 @@
     context.stroke();
 
     // 绘制第三条线 线宽为3 颜色为yellow
-    context.beginPath();
+    // context.beginPath();
     context.strokeStyle = 'yellow';
     context.lineWidth = 3;
     context.moveTo(200,150);
