--- a/Canvas/day01/Code/10-canvas绘制镂空正方形.html
+++ b/Canvas/day01/Code/10-canvas绘制镂空正方形.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Canvas绘制前准备工作</title>
+  <title>Canvas绘制镂空正方形</title>
 </head>
 <body>
   <img src="./image/feilinghuanraoyuanze.png" alt="">
