finished mobileProject html structure

--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>乐淘云购</title>
-  
+  <!-- 引入网站图标 -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <!-- 引入UI框架-MUI -->
+  <link rel="stylesheet" href="./lib/mui/css/mui.css">
+  <!-- 引入字体图标库 -->
+  <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.css">
+  <!-- 引入公共样式 -->
+  <link rel="stylesheet" href="./css/common.css">
+  <!-- 引入首页样式 -->
+  <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-  
+
+
+  <!-- 引入MUI库中的插件 -->
+  <script src="./lib/mui/js/mui.js"></script>
+  <!-- 引入模板引擎库 -->
+  <script src="./lib/artTemplate/template-native.js"></script>
+  <!-- 引入zepto库 -->
+  <script src="./lib/zepto/zepto.min.js"></script>
+  <!-- 引入工具javascript -->
+  <script src="./js/common.js"></script>
+  <!-- 引入首页的javascript -->
+  <script src="./js/index.js"></script>
 </body>
+
 </html>
