update  mobileProject  frontEnd's index.html and index.css

--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
@@ -18,8 +18,197 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 
-<body>
+<body class="mui-ios mui-ios-9 mui-ios-9-1">
+  <!-- 头部导航栏 -->
+  <header class="mui-bar mui-bar-nav lt-header">
+    <a id="search" class="mui-pull-right lt-header-search">
+      <span class="fa fa-search"></span>
+    </a>
+    <h1 class="mui-title">乐淘云购</h1>
+  </header>
 
+  <!-- 内容区域 -->
+  <main class="mui-content">
+    <!-- 轮播图 -->
+    <div class="mui-slider">
+      <div class="mui-slider-group mui-slider-loop">
+        <div class="mui-slider-item mui-slider-item-duplicate">
+          <a href="#">
+            <img src="./images/banner4.png" />
+          </a>
+        </div>
+        <div class="mui-slider-item">
+          <a href="#">
+            <img src="./images/banner1.png" />
+          </a>
+        </div>
+        <div class="mui-slider-item">
+          <a href="#">
+            <img src="./images/banner2.png" />
+          </a>
+        </div>
+        <div class="mui-slider-item">
+          <a href="#">
+            <img src="./images/banner3.png" />
+          </a>
+        </div>
+        <div class="mui-slider-item">
+          <a href="#">
+            <img src="./images/banner4.png" />
+          </a>
+        </div>
+        <div class="mui-slider-item mui-slider-item-duplicate">
+          <a href="#">
+            <img src="./images/banner1.png" />
+          </a>
+        </div>
+      </div>
+      <div class="mui-slider-indicator">
+        <div class="mui-indicator mui-active"></div>
+        <div class="mui-indicator"></div>
+        <div class="mui-indicator"></div>
+        <div class="mui-indicator "></div>
+      </div>
+    </div>
+    <!-- 九宫格 -->
+    <ul class="mui-table-view mui-grid-view mui-grid-9 lt-nav ">
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav1.png" alt="">
+        </a>
+      </li>
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav2.png" alt="">
+        </a>
+      </li>
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav3.png" alt="">
+        </a>
+      </li>
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav4.png" alt="">
+        </a>
+      </li>
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav5.png" alt="">
+        </a>
+      </li>
+      <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
+        <a href="#">
+          <img src="./images/nav6.png" alt="">
+        </a>
+      </li>
+    </ul>
+    <!-- 活动  -->
+    <div class="lt-activity">
+      <div class="mui-row">
+        <div class="mui-col-xs-8 mui-col-sm-8">
+          <div class="mui-row">
+            <div class="mui-col-xs-6 mui-col-sm-6">
+              <a href="">
+                <img src="./images/active1.png" alt="">
+              </a>
+            </div>
+            <div class="mui-col-xs-6 mui-col-sm-6">
+              <a href="">
+                <img src="./images/active2.png" alt="">
+              </a>
+            </div>
+            <div class="mui-col-xs-6 mui-col-sm-6">
+              <a href="">
+                <img src="./images/active5.png" alt="">
+              </a>
+            </div>
+            <div class="mui-col-xs-6 mui-col-sm-6">
+              <a href="">
+                <img src="./images/active4.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="mui-col-xs-4 mui-col-sm-4">
+          <a href="">
+            <img src="./images/active3.png" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- 品牌专区 -->
+    <div class="lt-brand">
+      <div class="mui-row">
+        <div class="mui-col-xs-12 mui-col-sm-12">
+          <a href="">
+            <img src="./images/title0.png" alt="">
+          </a>
+        </div>
+
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand1.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand2.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand3.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand4.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand5.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand6.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand7.png" alt="">
+          </a>
+        </div>
+        <div class="mui-col-xs-3 mui-col-sm-3">
+          <a href="">
+            <img src="./images/brand8.png" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- 底部工具栏 -->
+  <footer class="mui-bar mui-bar-tab lt-tool">
+    <a class="mui-tab-item lt-tool-home mui-active">
+      <span class="fa fa-home"></span>
+      <b class="lt-font-home">首页</b>
+    </a>
+    <a class="mui-tab-item lt-tool-sort ">
+      <span class="fa fa-navicon"></span>
+      <b class="lt-font-sort">分类</b>
+    </a>
+    <a class="mui-tab-item  lt-tool-cart">
+      <span class="fa fa-shopping-cart"></span>
+      <b class="lt-font-cart">购物车</b>
+    </a>
+    <a class="mui-tab-item lt-tool-user ">
+      <span class="fa fa-user"></span>
+      <b class="lt-font-user">会员中心</b>
+    </a>
+  </footer>
 
   <!-- 引入MUI库中的插件 -->
   <script src="./lib/mui/js/mui.js"></script>
