--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/index.html
@@ -188,6 +188,128 @@
         </div>
       </div>
     </div>
+
+    <!-- 运动生活 -->
+    <div class="lt-sports">
+      <div class="mui-row">
+        <div class="mui-col-xs-12 mui-col-sm-12">
+          <img src="./images/title1.png" alt="">
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S837004你值得拥有
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn button">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- 男士专区 -->
+    <div class="lt-man">
+      <div class="mui-row">
+        <div class="mui-col-xs-12 mui-col-sm-12">
+          <img src="./images/title3.png" alt="">
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S837004你值得拥有
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn button">立即购买</button>
+          </a>
+        </div>
+        <div class="mui-col-xs-6 mui-col-sm-6">
+          <a class="lt-sports-item" href="javascript:;">
+            <img src="./images/product.jpg" alt="">
+            <p class="lt-sports-desc">
+              adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+            </p>
+            <div class="lt-sports-price">
+              <span class="new">￥560.00</span>
+              <span class="old">￥888.00</span>
+            </div>
+            <button class="lt-sports-buy-btn">立即购买</button>
+          </a>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- 底部工具栏 -->
