--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/layout.html
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/layout.html
@@ -21,10 +21,13 @@
 <body class="mui-ios mui-ios-9 mui-ios-9-1">
   <!-- 头部导航栏 -->
   <header class="mui-bar mui-bar-nav lt-header">
-    <a id="search" class="mui-pull-right lt-header-search">
-      <span class="fa fa-search"></span>
+    <a href="javascript:;" id="lt-back"  class="mui-pull-left lt-header-back">
+      <span class="fa fa-chevron-left"></span>
     </a>
     <h1 class="mui-title">乐淘云购</h1>
+    <a id="lt-search" class="mui-pull-right lt-header-search">
+      <span class="fa fa-search"></span>
+    </a>
   </header>
 
   
