--- a/mobileProject/day01/Code/com.letao.www/public/frontEnd/user.html
+++ b/mobileProject/day01/Code/com.letao.www/public/frontEnd/user.html
@@ -1,5 +1,32 @@
-<H1>排序 </H1>
-<script>
-
-  console.log(1);
-</script>
+<link rel="stylesheet" href="./lib/mui/css/mui.css">
+<link rel="stylesheet" href="./css/user.css">
+<main class="mui-content">
+  <ul class="mui-table-view">
+    <li class="mui-table-view-cell mui-media">
+      <a href="javascript:;">
+        <img class="mui-media-object mui-pull-left" src="./images/user.jpg">
+        <div class="mui-media-body">
+          wanlum
+          <p class="mui-ellipsis">绑定手机:<span>15801123626</span></p>
+        </div>
+      </a>
+    </li>
+    <li class="mui-table-view-cell">
+      <a class="mui-navigate-right">
+        账号与安全
+      </a>
+    </li>
+    <li class="mui-table-view-cell">
+      <a class="mui-navigate-right">
+        我的购物车
+      </a>
+    </li>
+    <li class="mui-table-view-cell">
+      <a class="mui-navigate-right">
+        收货地址管理
+      </a>
+    </li>
+        
+  </ul>
+  <div style="padding: 0 10px;"><a href="javascript:;" class="lt-quit-button mui-btn">退出登录</a></div>
+  </mian>
